--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,7 @@
 <resources>
-    <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="spacing_normal">8dp</dimen>
+    <dimen name="margin_vertical_normal">16dp</dimen>
+    <dimen name="margin_vertical_medium">24dp</dimen>
+    <dimen name="list_item_height">56dp</dimen>
+    <dimen name="icon_viewport_size">40dp</dimen>
 </resources>
