--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -9,8 +9,8 @@
     <include layout="@layout/toolbar_search" />
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_search_history"
+        android:id="@+id/recycler_history"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:listitem="@layout/item_search_history" />
+        tools:listitem="@layout/item_history" />
 </LinearLayout>
