--- a/app/src/main/res/layout/toolbar_search.xml
+++ b/app/src/main/res/layout/toolbar_search.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/toolbar_search"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
     android:background="@color/colorPrimary"
     android:elevation="2dp"
-    app:theme="@style/ThemeOverlay.AppCompat.ActionBar">
+    android:theme="@style/ThemeOverlay.AppCompat.ActionBar">
 
     <FrameLayout
         android:id="@+id/toolbar_layout_action"
@@ -44,6 +43,7 @@
             android:background="@null"
             android:hint="@string/toolbar_search_for_tags"
             android:imeOptions="actionSearch"
+            android:imeActionLabel="sdsd"
             android:inputType="textFilter"
             android:maxLines="1"
             android:textColorHint="@color/textColorPrimary"
