--- a/app/src/main/res/layout/item_post_header.xml
+++ b/app/src/main/res/layout/item_post_header.xml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
+              xmlns:fresco="http://schemas.android.com/apk/res-auto"
               android:orientation="horizontal"
               android:paddingBottom="@dimen/padding_very_small"
               android:paddingTop="@dimen/padding_very_small">
 
-    <ImageView
-        android:id="@+id/image_avatar"
+    <com.facebook.drawee.view.SimpleDraweeView
+        android:id="@+id/drawee_avatar"
         android:layout_width="@dimen/header_content_height"
         android:layout_height="@dimen/header_content_height"
         android:paddingBottom="@dimen/padding_very_small"
-        android:paddingLeft="@dimen/padding_normal"
-        android:paddingRight="@dimen/padding_small"
-        android:paddingTop="@dimen/padding_small"
-        android:src="@mipmap/ic_launcher"/>
+        android:layout_marginLeft="@dimen/padding_normal"
+        android:layout_marginRight="@dimen/padding_normal"
+        android:layout_marginTop="@dimen/padding_normal"
+        fresco:placeholderImage="@color/item_post_header_avatar_placeholder"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -41,4 +42,4 @@
             android:text="@string/lorem_2words"/>
     </LinearLayout>
 
-</LinearLayout>
+</merge>
