--- a/app/src/main/res/layout/item_post_separator.xml
+++ b/app/src/main/res/layout/item_post_separator.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <View xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
-              android:layout_height="20dp"
-              android:background="#cacaca"/>
+              android:layout_height="@dimen/separator_height"
+              android:background="@color/item_post_separator"/>
 
