--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,5 +9,6 @@
     <dimen name="icon_viewport_size">40dp</dimen>
 
     //PostAdapter
-    <dimen name="header_content_height">60dp</dimen>
+    <dimen name="header_content_height">50dp</dimen>
+    <dimen name="separator_height">10dp</dimen>
 </resources>
