--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -31,6 +31,8 @@
             android:ellipsize="end"
             android:maxLines="1"
             android:text="@string/lorem_2words"
+            android:textColor="@color/item_comment_author"
+            android:textSize="@dimen/comment_author"
             android:textStyle="bold"/>
 
         <TextView
@@ -38,35 +40,44 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="@dimen/padding_normal"
-            android:text="@string/lorem_2sentences"/>
+            android:text="@string/lorem_2sentences"
+            android:textColor="@color/item_comment_content"
+            android:textSize="@dimen/comment_content"/>
 
         <LinearLayout
             android:id="@+id/view_info"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="@dimen/padding_normal"
+            android:layout_marginTop="@dimen/padding_small"
             android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/text_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/lorem_2words"/>
+                android:text="@string/lorem_2words"
+                android:textColor="@color/item_comment_date"
+                android:textSize="@dimen/comment_info"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingLeft="@dimen/padding_normal"
                 android:paddingRight="@dimen/padding_normal"
-                android:text="@string/post_comments_info_separator"/>
+                android:text="@string/post_comments_info_separator"
+                android:textSize="@dimen/comment_info"/>
 
             <TextView
                 android:id="@+id/text_counter_votes"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:drawableLeft="@drawable/ic_add_circle_gray_12dp"
+                android:drawableLeft="@drawable/ic_add_circle_accent_12dp"
                 android:drawablePadding="@dimen/padding_small"
-                android:text="@string/lorem_digit"/>
+                android:text="@string/lorem_digit"
+                android:textColor="@color/colorAccent"
+                android:textSize="@dimen/comment_info"
+                android:gravity="center_vertical"/>
         </LinearLayout>
     </LinearLayout>
 
