--- a/app/src/main/res/layout/item_post_counters.xml
+++ b/app/src/main/res/layout/item_post_counters.xml
@@ -10,13 +10,14 @@
         android:layout_width="0dp"
         android:layout_height="18dp"
         android:layout_weight="1"
-        android:drawableLeft="@drawable/ic_add_circle_green_18dp"
-        android:drawableStart="@drawable/ic_add_circle_green_18dp"
+        android:drawableLeft="@drawable/ic_add_circle_accent_18dp"
+        android:drawableStart="@drawable/ic_add_circle_accent_18dp"
         android:gravity="center_vertical|start"
         android:paddingLeft="@dimen/padding_normal"
         android:paddingStart="@dimen/padding_normal"
         android:text="@string/post_counters_votes_param"
-        android:textSize="13sp"/>
+        android:textColor="@color/item_post_counters"
+        android:textSize="@dimen/post_counters"/>
 
     <TextView
         android:id="@+id/text_counter_comments"
@@ -24,10 +25,11 @@
         android:layout_height="18dp"
         android:layout_weight="1"
         android:gravity="center_vertical|end"
-        android:paddingRight="@dimen/padding_normal"
         android:paddingEnd="@dimen/padding_normal"
+        android:paddingRight="@dimen/padding_normal"
         android:text="@string/post_counters_comments_param"
-        android:textSize="13sp"/>
+        android:textColor="@color/item_post_counters"
+        android:textSize="@dimen/post_counters"/>
 
 </LinearLayout>
 
