--- a/app/src/main/res/layout/item_post_header.xml
+++ b/app/src/main/res/layout/item_post_header.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              xmlns:fresco="http://schemas.android.com/apk/res-auto"
-              android:orientation="horizontal"
-              android:paddingBottom="@dimen/padding_very_small"
-              android:paddingTop="@dimen/padding_very_small">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+       xmlns:fresco="http://schemas.android.com/apk/res-auto"
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:orientation="horizontal"
+       android:paddingBottom="@dimen/padding_very_small"
+       android:paddingTop="@dimen/padding_very_small">
 
     <com.facebook.drawee.view.SimpleDraweeView
         android:id="@+id/drawee_avatar"
         android:layout_width="@dimen/header_content_height"
         android:layout_height="@dimen/header_content_height"
-        android:paddingBottom="@dimen/padding_very_small"
         android:layout_marginLeft="@dimen/padding_normal"
         android:layout_marginRight="@dimen/padding_normal"
         android:layout_marginTop="@dimen/padding_normal"
+        android:paddingBottom="@dimen/padding_very_small"
         fresco:placeholderImage="@color/item_post_header_avatar_placeholder"/>
 
     <LinearLayout
@@ -22,7 +22,9 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:orientation="vertical"
-        android:paddingTop="@dimen/padding_small">
+        android:layout_toRightOf="@id/drawee_avatar"
+        android:paddingTop="@dimen/padding_small"
+        android:layout_centerVertical="true">
 
         <TextView
             android:id="@+id/text_author"
@@ -31,6 +33,8 @@
             android:ellipsize="end"
             android:maxLines="1"
             android:text="@string/lorem_2words"
+            android:textColor="@color/item_post_header_author"
+            android:textSize="@dimen/post_header_author"
             android:textStyle="bold"/>
 
         <TextView
@@ -39,7 +43,21 @@
             android:layout_height="wrap_content"
             android:ellipsize="end"
             android:maxLines="1"
-            android:text="@string/lorem_2words"/>
+            android:text="@string/lorem_2words"
+            android:textColor="@color/item_post_header_date"
+            android:textSize="@dimen/post_header_date"/>
     </LinearLayout>
 
-</merge>
+    <ImageView
+        android:id="@+id/view_more"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingTop="@dimen/padding_small"
+        android:paddingBottom="@dimen/padding_small"
+        android:paddingLeft="@dimen/padding_normal"
+        android:paddingRight="@dimen/padding_normal"
+        android:src="@drawable/ic_expand_more_24dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"/>
+
+</RelativeLayout>
