--- a/app/src/main/res/layout/item_post_header.xml
+++ b/app/src/main/res/layout/item_post_header.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-       xmlns:fresco="http://schemas.android.com/apk/res-auto"
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       android:orientation="horizontal"
-       android:paddingBottom="@dimen/padding_very_small"
-       android:paddingTop="@dimen/padding_very_small">
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:fresco="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@color/item_post_bg"
+    android:orientation="horizontal"
+    android:paddingBottom="@dimen/padding_very_small"
+    android:paddingTop="@dimen/padding_very_small">
 
     <com.facebook.drawee.view.SimpleDraweeView
         android:id="@+id/drawee_avatar"
@@ -20,11 +22,11 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
         android:layout_gravity="center_vertical"
-        android:orientation="vertical"
         android:layout_toRightOf="@id/drawee_avatar"
-        android:paddingTop="@dimen/padding_small"
-        android:layout_centerVertical="true">
+        android:orientation="vertical"
+        android:paddingTop="@dimen/padding_small">
 
         <TextView
             android:id="@+id/text_author"
@@ -52,12 +54,12 @@
         android:id="@+id/view_more"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingTop="@dimen/padding_small"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
         android:paddingBottom="@dimen/padding_small"
         android:paddingLeft="@dimen/padding_normal"
         android:paddingRight="@dimen/padding_normal"
-        android:src="@drawable/ic_expand_more_24dp"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"/>
+        android:paddingTop="@dimen/padding_small"
+        android:src="@drawable/ic_expand_more_24dp"/>
 
 </RelativeLayout>
