--- a/app/src/main/res/layout/view_toolbar_searchable.xml
+++ b/app/src/main/res/layout/view_toolbar_searchable.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/toolbar_search"
+<android.support.v7.widget.Toolbar
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
-    android:background="@color/colorPrimary"
-    android:elevation="2dp"
     android:theme="@style/ThemeOverlay.AppCompat.ActionBar">
 
     <FrameLayout
         android:id="@+id/toolbar_layout_action"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:visibility="visible">
 
         <TextView
             android:layout_width="match_parent"
@@ -23,7 +23,7 @@
             android:gravity="center_vertical"
             android:text="@string/toolbar_search_title"
             android:textColor="@color/colorPrimaryDark"
-            android:textSize="18sp" />
+            android:textSize="18sp"/>
     </FrameLayout>
 
     <FrameLayout
@@ -42,12 +42,12 @@
             android:layout_height="match_parent"
             android:background="@null"
             android:hint="@string/toolbar_search_for_tags"
-            android:imeOptions="actionSearch"
             android:imeActionLabel="sdsd"
+            android:imeOptions="actionSearch"
             android:inputType="textFilter"
             android:maxLines="1"
             android:textColorHint="@color/colorPrimaryDark"
-            android:textCursorDrawable="@drawable/shape_text_cursor" />
+            android:textCursorDrawable="@drawable/shape_text_cursor"/>
 
         <ImageView
             android:id="@+id/button_field_cancel"
@@ -55,7 +55,7 @@
             android:layout_height="match_parent"
             android:layout_gravity="end"
             android:contentDescription="@string/toolbar_action_close"
-            android:src="@drawable/ic_cancel_gray_24dp" />
+            android:src="@drawable/ic_cancel_gray_24dp"/>
     </FrameLayout>
 
 </android.support.v7.widget.Toolbar>
