--- a/app/src/main/res/layout/state_history_empty.xml
+++ b/app/src/main/res/layout/state_history_empty.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/error_state_general"
+    android:id="@+id/state_history_empty"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:visibility="gone">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,10 +15,10 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:drawableTop="@drawable/ic_search_history_palette_3_100dp"
             android:drawablePadding="@dimen/padding_normal"
-            android:drawableTop="@drawable/ic_error_outline_palette_3_100dp"
             android:gravity="center"
-            android:text="@string/error_state_general_title"
+            android:text="@string/state_history_empty_title"
             android:textColor="@color/palette_1"
             android:textSize="22sp">
         </TextView>
@@ -27,7 +28,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:paddingTop="@dimen/padding_normal"
-            android:text="@string/error_state_general_instruction"
+            android:text="@string/state_history_empty_instruction"
             android:textColor="@color/palette_4"/>
     </LinearLayout>
 </FrameLayout>
