--- a/app/src/main/res/menu/menu_search.xml
+++ b/app/src/main/res/menu/menu_search.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+      xmlns:tools="http://schemas.android.com/tools">
     <item
         android:id="@+id/action_clear_history"
-        android:title="@string/toolbar_action_clear_history"/>
+        android:title="@string/toolbar_action_clear_history"
+        tools:ignore="HardcodedText"/>
 </menu>
