posts activity view states along with espresso tests

--- a/app/src/main/res/layout/state_general_error.xml
+++ b/app/src/main/res/layout/state_general_error.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/error_state_general"
+    android:id="@+id/state_general_error"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:visibility="gone">
 
     <LinearLayout
         android:layout_width="match_parent"
