--- a/app/src/main/res/layout/item_post_text_section.xml
+++ b/app/src/main/res/layout/item_post_text_section.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-       android:layout_width="match_parent"
-       android:layout_height="match_parent"
-       android:background="@color/item_post_bg">
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             android:background="@color/item_post_bg">
 
     <TextView
         android:id="@+id/text_content"
@@ -14,6 +14,7 @@
         android:paddingTop="@dimen/padding_small"
         android:text="@string/lorem_2sentences"
         android:textColor="@color/item_post_text_section"
+        android:textColorLink="@color/palette_2"
         android:textSize="@dimen/post_text_section"/>
 
 </FrameLayout>
