implement mvp and cache

--- a/app/src/main/res/layout/item_comment_footer.xml
+++ b/app/src/main/res/layout/item_comment_footer.xml
@@ -33,7 +33,7 @@
         android:drawablePadding="@dimen/padding_small"
         android:gravity="center_vertical"
         android:text="@string/lorem_digit"
-        android:textColor="@color/colorAccent"
+        android:textColor="@color/item_post_like"
         android:textSize="@dimen/comment_info"/>
 
 </LinearLayout>
