--- a/app/src/main/res/drawable/ic_add_circle_accent_12dp.xml
+++ b/app/src/main/res/drawable/ic_add_circle_accent_12dp.xml
@@ -1,7 +1,7 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
         android:width="12dp"
         android:height="12dp"
-        android:tint="@color/colorAccent"
+        android:tint="@color/item_post_like"
         android:viewportHeight="24.0"
         android:viewportWidth="24.0">
     <path
