use vector drawable support

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -29,7 +29,7 @@
     <color name="item_post_header_more">#BDBDBE</color>
     <color name="item_post_text_section">#0F0F0F</color>
     <color name="item_post_counters">#9E9E9E</color>
-    <color name="item_post_like">#81C784</color>
+    <color name="item_post_like">#045c83</color>
     <color name="item_post_embed_bg">#212121</color>
     <color name="item_post_bottom_sheet_more">#0F0F0F</color>
 
